task/#1-aop-logging#2 - changes made